@@ -120,7 +120,7 @@ public abstract class Node {
      * @since 0.16.0
      */
     public List<SourceSpan> getSourceSpans() {
-        return sourceSpans != null ? Collections.unmodifiableList(sourceSpans) : Collections.<SourceSpan>emptyList();
+        return sourceSpans != null ? Collections.unmodifiableList(sourceSpans) : List.of();
     }
 
     /**
